# django-cast

./: pyproject.toml
cast/: __init__.py  models.py  views.py
cast/migrations/: 0029_auto_20190713_1406.py  0030_blogindexpage.py
cast/templates/cast/: blog_index_page.html  blog_page.html
cast/templates/cast/blocks/: image.html
tests/: settings.py
