[tool.poetry]
name = "django-cast"
version = "0.1.0"
description = "Just another blogging / podcasting package"
authors = ["Jochen Wersdörfer <jochen@wersdoerfer.de>"]
packages = [
    { include = "./commands.py" },
]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.3"
Pillow = "^7.0.0"
django-filter = "^2.2.0"
django-watson = "^1.5.4"
coreapi = "^2.3.3"
djangorestframework = "^3.11.0"
python-slugify = "^4.0.0"
django-model-utils = "^4.0.0"

[tool.poetry.dev-dependencies]
Sphinx = "^2.4.3"
sphinx-rtd-theme = "^0.4.3"
twine = "^3.1.1"
flake8 = "^3.7.9"
black = "^19.10b0"
typer = "^0.0.8"
jupyter = "^1.0.0"
ipdb = "^0.13.1"
coverage = "^5.0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
test = "commands:test"
lint = "commands:flake8"
autoformat = "commands:black"
show_coverage = "commands:coverage"
docs = "commands:docs"
notebook = "commands:notebook"
